fix(jdk17): batch-5 adaptations for the 26.9.1 backport
Catalog rewrites, plus NonFiniteNumbers.decode()'s 'case null, default' String
switch ported to an if/else chain, and two List.getLast() calls on method-call
receivers given a local so the size() lookup has something to name.